# TaskTracker

./: .gitignore  BlockOfNotesOpenButton.qml  BlockOfNotesWidget.qml  CMakeLists.txt  CalendarPage.qml  EditBlockOfNotesTitleDrawer.qml  EditNoteDatePopup.qml  EditNoteDrawer.qml  EditNotePlacePopup.qml  EditNoteTimePopup.qml  Main.qml  NoteWidget.qml  StatisticPage.qml  human.cpp  human.h  importantdate.cpp  importantdate.h  main.cpp  mapwidget.cpp  mapwidget.h  note.cpp  note.h  notesblock.cpp  notesblock.h  notesmanager.cpp  notesmanager.h  place.cpp  place.h  qtcsettings.cmake
